// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should renders default 1`] = `
<styled.input
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="Search Products"
  type="text"
/>
`;

exports[`SearchBar should renders with keyword 1`] = `
<styled.input
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="Search Products"
  type="text"
  value="MacBook Pro 2018"
/>
`;
